--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.5.3"
+  },
+  "devDependencies": {
+    "prettier": "2.7.1"
   }
 }
