--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "src/app.js",
   "scripts": {
+    "dev": "nodemon",
     "start": "node src/app.js"
   },
   "keywords": [],
@@ -15,6 +16,7 @@
     "mongoose": "^6.5.3"
   },
   "devDependencies": {
+    "nodemon": "^2.0.19",
     "prettier": "2.7.1"
   }
 }
